# native-boinc-for-android

./: .gitignore_global  README  README.md  arithmetic-arm.S  btop-arm.S
src/boinc-6.12.38/db/: Makefile  Makefile.am  Makefile.in  boinc_db.cpp  db_base.cpp
src/boinc-7.0.36/db/: Makefile.am  Makefile.in  boinc_db.cpp  db_base.cpp
src/setiathome-6.12/seti_boinc/: AUTHORS  COPYRIGHT  CheckResult  Makefile  Makefile.am  Makefile.in  README  README.android  _autosetup  aclocal.m4  build-android.sh  checkin_notes  config.status  configure.ac  ffxout-ffts  libtool  nightly-tarball  sah_config.h  sah_config.h.in
src/setiathome-6.12/seti_boinc/assimilator/: Makefile  Makefile.am  Makefile.in  sah_assimilate_handler.cpp
src/setiathome-6.12/seti_boinc/client/: .directory  Makefile.am  Makefile.in  Makefile.in.graphics  analyze.h  analyzeFuncs.cpp  analyzePoT.cpp  analyzeReport.cpp  analyzeReport.h  app_icon.h  collect2_line_solaris.csh  fft8g.cpp  fft8g.h  gaussfit.cpp  gaussfit.h  gdata.cpp  gdata.h  graphics_main.cpp  malloc_a.cpp  malloc_a.h  progress.cpp  progress.h  pulsefind.cpp  pulsefind.h  s_util.cpp  s_util.h  sah_gfx.cpp  sah_gfx_base.cpp  sah_gfx_base.h  sah_gfx_main.cpp  sah_gfx_main.h  sah_version.cpp  sah_version.h  seti.cpp  seti.h  seti_header.cpp  seti_header.h  spike.cpp  spike.h  timecvt.h  (+2 more)
src/setiathome-6.12/seti_boinc/client/test_workunits/: reference_result_unit.sah  reference_work_unit.sah
src/setiathome-6.12/seti_boinc/client/vector/: analyzeFuncs_fpu.cpp  analyzeFuncs_sse.cpp  analyzeFuncs_sse2.cpp  analyzeFuncs_sse3.cpp  analyzeFuncs_vector.cpp  analyzeFuncs_vector.h  analyzeFuncs_x86_64.cpp  asmlib.h  hires_timer.cpp  neon_ChirpData.S  neon_FoldSubs.S  neon_GetPowerSpectrum.S  sighandler.h  vfp_FoldSubs.S  vfp_GetPowerSpectrum.S  x86_float4.cpp  x86_float4.h  x86_ops.h
src/setiathome-6.12/seti_boinc/client/win_build/: fftw3.h  (+17 more)
src/setiathome-6.12/seti_boinc/db/: Makefile  app_config.cpp  app_config.h  db_table.h  migrate_test.cpp  row_cache.h  schema_master.cpp  schema_master.h  schema_master.sql  schema_to_class  schema_to_class.awk  schema_to_class.in  sqldefs.h  sqlifx.ec  sqlint8.cpp  sqlint8.h  sqlrow.cpp  sqlrow.h  xml_util.h
src/setiathome-6.12/seti_boinc/glut/: glut.h
src/setiathome-6.12/seti_boinc/jpeglib/: Makefile  Makefile.in
src/setiathome-6.12/seti_boinc/m4/: libcurl.m4  sah_asmlib.m4  sah_check_healpix.m4  sah_check_ipp.m4  sah_check_lib.m4  sah_check_math_functions.m4  sah_find_setilib.m4  sah_make_dll.m4
src/setiathome-6.12/seti_boinc/mac_build/: HowToBuildSETI_XCode.rtf  buildfftw-3.1.1.sh  config-i386.h  config-ppc.h  makeseticonfigs.sh  sah_config.h
src/setiathome-6.12/seti_boinc/setiathome.pbproj/: project.pbxproj
src/setiathome-6.12/seti_boinc/splitter/: Makefile  Makefile.in  angdist.h  cmap_interp.cpp  db_fns.cpp  dotransform.cpp  dotransform.h  four1.h  hr_min_sec.cpp  makebufs.cpp  makebufs.h  mb_angdist.cpp  mb_dotransform.cpp  mb_dotransform.h  mb_message.cpp  mb_polyphase.cpp  mb_splitter.cpp  mb_splitter.h  mb_wufiles.cpp  message.h  polyphase.cpp  splitter.h  validrun.h
src/setiathome-6.12/seti_boinc/splitter_old/: Makefile.in  angdist.cpp  angdist.h  coordcvt.cpp  coordcvt.h  db_fns.cpp  dotransform.cpp  dotransform.h  hr_min_sec.cpp  message.cpp  message.h  polyphase.cpp  randomdata.cpp  readheader.cpp  readtape.cpp  splitter.cpp  validrun.cpp  writeheader.cpp  wufiles.cpp  wufiles.h
src/setiathome-6.12/seti_boinc/tools/: Makefile  Makefile.am  Makefile.in  fakedata  fakedata.cpp  workunit_resample  workunit_to_ascii  workunit_to_ascii.cpp
src/setiathome-6.12/seti_boinc/validate/: Makefile  Makefile.in  sah_result.cpp  sah_result.h  sah_validate.cpp
src/setiathome-6.12/seti_boinc/vector_lib/: 3dnow.h  Makefile  generics.h  ps.cpp  sse.h  t1.cpp
src/setiathome-6.12/seti_boinc/win_build/: win_version.h
src/setiathome-6.12/setilib/: Makefile.am  _autosetup  checkin_notes  configure.ac
src/setiathome-6.12/setilib/demo/: Makefile.am  compare_zenaz_corrections.cpp  demo_seti_time.cpp  dr2_stub_filter.cpp  format_dr2_data.cc  precess2.cc  printSignals.cc  show_radar_blanker.cc  signals_by_id_range_demo.cpp  signals_by_tape_id_demo.cpp
src/setiathome-6.12/setilib/include/: Makefile.am  least_squares.h  mtrand.h  seti_byteorder.h  seti_cfg.h  seti_coord.h  seti_db_queries.h  seti_doppler.h  seti_dr2filter.h  seti_dr2utils.h  seti_healpix.h  seti_rfi.h  seti_rfi_algo.h  seti_rfi_staff.h  seti_rfi_zone.h  seti_signal.h  seti_synthetic_data.h  seti_tel.h  seti_time.h  setilib.h  smooth.h  truncated_add.h
src/setiathome-6.12/setilib/lib/: Makefile.am
src/setiathome-6.12/setilib/m4/: sah_check_healpix.m4  sah_check_jpeglib.m4  sah_find_s4path.m4  sah_largefile_breaks_cxx.m4
src/setiathome-6.12/setilib/src/: mtrand.cpp  seti_aoutils.cpp  seti_cfg.cpp  seti_coord.cpp  seti_doppler.cpp  seti_dr2filter.cpp  seti_dr2utils.cpp  seti_healpix.cpp  seti_rfi.cpp  seti_rfi_staff.cpp  seti_rfi_zone.cpp  seti_signal.cpp  seti_synthetic_data.cpp  seti_tel.cpp  seti_time.cpp
src/setiathome-7.0/seti_boinc/client/: Makefile.Readme  Makefile.am  Makefile.in  amd64fft8g.cpp  analyze.h  analyzeFuncs.cpp  analyzeFuncs.h  analyzePoT.cpp  analyzePoT.h  analyzeReport.cpp  analyzeReport.h  autocorr.cpp  autocorr.h  chirpfft.cpp  chirpfft.h  collect2_line_linux.csh  gaussfit.cpp  gdata.cpp  gdata.h  lcgamm.cpp  lcgamm.h  main.cpp  malloc_a.cpp  progress.cpp  progress.h  pulsefind.cpp  pulsefind.h  sah_gfx.cpp  sah_gfx.h  sah_gfx_base.cpp  seti.cpp  seti.h  setupfpu.S  sincos.h  spike.cpp  timecvt.cpp  win-sah_config.h  worker.cpp  worker.h
src/setiathome-7.0/seti_boinc/splitter_fft/: Makefile.am  Makefile.in  angdist.cpp  coordcvt.h  db_fns.h  dotransform.cpp  encode.h  four1.cpp  mb_angdist.h  mb_dotransform.cpp  mb_polyphase.cpp  mb_splitter.cpp  mb_splitter.h  mb_splittypes.h  mb_wufiles.cpp  mb_wufiles.h  polyphase.cpp  polyphase.h  readheader.h  readtape.cpp  splitparms.h  squarewave.cpp  writeheader.h  wufiles.cpp  wufiles.h
src/setiathome-7.0/seti_boinc/tools/: Makefile.am  Makefile.in  workunit_resample.cpp
(+2302 files in other folders)
