## -*- mode: makefile; tab-width: 4 -*-
## $Id: Makefile.am 17563 2009-03-09 15:38:21Z korpela $

include $(top_srcdir)/Makefile.incl

## the following headers need to be installed
if INSTALL_HEADERS
pkginclude_HEADERS =  boinc_db.h db_base.h
endif

## other stuff to go into the distribution
EXTRA_DIST = constraints.sql schema.sql init_db
